# Anjay-lite

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.rst  Doxyfile  LICENSE  LICENSE.3RDPARTY  README.md  devconfig  requirements.txt
.github/workflows/: build_docs.yml
cmake/: anjay_lite-config-version.cmake  anjay_lite-config.cmake  anjay_lite_mbedtls.cmake
doc/: CMakeLists.txt
doc/sphinx/: snippet_sources.md5
doc/sphinx/extensions/: file_dirtiness_checker.py  snippet_source.py
doc/sphinx/source/: AdvancedTopics.rst  BasicClient.rst  BetaLimitationsandWorkarounds.rst  CompilationImpact.rst  Compile_client_applications.rst  FirmwareUpdateTutorial.rst  Integrations.rst  Introduction.rst  KnownIssues.rst  KnownIssuesAndLimitations.rst  PortingGuideForNonPOSIXPlatforms.rst  Tools.rst  index.rst
examples/custom-network/minimal/: CMakeLists.txt
examples/custom-network/reuse-port/: CMakeLists.txt
examples/tutorial/AT-Bootstrap/: CMakeLists.txt
examples/tutorial/AT-ExternalDataTypes/: CMakeLists.txt
examples/tutorial/AT-MicroLogs/: CMakeLists.txt
examples/tutorial/AT-MultiInstanceObject/: CMakeLists.txt
examples/tutorial/AT-MultiInstanceObjectDynamic/: CMakeLists.txt
examples/tutorial/AT-MultiInstanceResource/: CMakeLists.txt
examples/tutorial/AT-MultiInstanceResourceDynamic/: CMakeLists.txt
examples/tutorial/AT-Persistence/: CMakeLists.txt
examples/tutorial/AT-QueueMode/: CMakeLists.txt
examples/tutorial/AT-TimeSynchronization/: CMakeLists.txt
examples/tutorial/AT-TimeSynchronizationPersistence/: CMakeLists.txt
examples/tutorial/AT-TimeSynchronizationPersistence/src/: main.c
examples/tutorial/BC-BasicObjectImplementation/: CMakeLists.txt
examples/tutorial/BC-Initialization/: CMakeLists.txt
examples/tutorial/BC-MandatoryObjects/: CMakeLists.txt
examples/tutorial/BC-Notifications/: CMakeLists.txt
examples/tutorial/BC-Security/: CMakeLists.txt
examples/tutorial/BC-Send/: CMakeLists.txt
examples/tutorial/firmware-update-coap-downloader/: CMakeLists.txt
examples/tutorial/firmware-update-coap-downloader/src/: firmware_update.c  firmware_update.h  main.c
examples/tutorial/firmware-update-coaps-downloader/: CMakeLists.txt
examples/tutorial/firmware-update-coaps-downloader/src/: firmware_update.c  firmware_update.h  main.c
include_public/anj/: anj_config.h.in  coap_downloader.h  core.h  crypto.h  defs.h  init.h  log.h  lwm2m_send.h  ntp.h  persistence.h  time.h  utils.h
include_public/anj_internal/: bootstrap.h  coap.h  coap_downloader.h  core.h  exchange.h  io_ctx.h  lwm2m_send.h  ntp.h  observe.h  register.h  server.h  srv_conn.h  utils.h
src/anj/: coap_downloader.c  exchange.c  exchange.h  exchange_cache.c  exchange_cache.h  log.c  ntp.c  persistence.c  time.c  utils.c  utils.h
tests/anj/core/: CMakeLists.txt  bootstrap.c  lwm2m_send.c  register.c  registration_session.c  server.c  server_bootstrap.c  server_register.c
tests/anj/dm/: CMakeLists.txt  dm.c  dm_bootstrap_delete.c  dm_bootstrap_discover.c  dm_bootstrap_handlers.c  dm_create.c  dm_delete.c  dm_device_object.c  dm_discover.c  dm_execute.c  dm_fw_update.c  dm_integration.c  dm_observe_handlers.c  dm_read.c  dm_register.c  dm_security_object.c  dm_server_object.c  dm_write_replace.c  dm_write_update.c
tests/anj/downloader/: CMakeLists.txt  coap_downloader.c
tests/anj/exchange/: CMakeLists.txt  client_requests.c  exchange_cache.c  server_requests.c
tests/anj/log/: CMakeLists.txt  log_alt_impl_header.h  log_filtering_config_header.h  main.c
tests/anj/net/: CMakeLists.txt  net_socket_nosec.c
tests/anj/standard_tests/: CMakeLists.txt  standard_tests_base_config.cmake
tests/anj/standard_tests/coap/: options.c  udp_attributes.c  udp_lwm2m_decode.c  udp_lwm2m_prepare.c
tests/anj/standard_tests/core/: bootstrap.c  lwm2m_send.c  register.c  registration_session.c  server_bootstrap.c  server_register.c  srv_conn.c
tests/anj/standard_tests/dm/: dm.c  dm_bootstrap_delete.c  dm_bootstrap_discover.c  dm_bootstrap_handlers.c  dm_create.c  dm_delete.c  dm_device_object.c  dm_discover.c  dm_execute.c  dm_fw_update.c  dm_integration.c  dm_observe_handlers.c  dm_read.c  dm_register.c  dm_security_object.c  dm_server_object.c  dm_write_replace.c  dm_write_update.c
tests/anj/standard_tests/downloader/: coap_downloader.c
tests/anj/standard_tests/exchange/: client_requests.c  exchange_cache.c  server_requests.c
tests/anj/standard_tests/io/: base64.c  bigdata.h  bootstrap_discover_payload.c  cbor_decoder_ll.c  cbor_encoder.c  cbor_in.c  discover_payload.c  lwm2m_cbor_encoder.c  lwm2m_cbor_in.c  opaque_in.c  opaque_out.c  register_payload.c  senml_cbor_encoder.c  senml_cbor_in.c  text_encoder.c  text_in.c  tlv_in.c  utils.c
tests/anj/standard_tests/mock/: net_api_mock.c  net_api_mock.h  time_api_mock.c  time_api_mock.h
tests/anj/standard_tests/ntp/: ntp.c
tests/anj/standard_tests/observe/: attr_check.c  notification_op.c  observe_comp_op.c  observe_op.c  write_attr.c
tests/anj/standard_tests/time/: time_api.c
tests/anj/standard_tests_without_composite/: CMakeLists.txt
tests/anj/standard_tests_without_lwm2m_1_2/: CMakeLists.txt
tests/codegen/: codegen_tests.sh
tests/codegen/add_object/: CMakeLists.txt  some_obj.xml
tests/codegen/add_object/src/: main.c  some_obj.h
tests/codegen/compilation/: CMakeLists.txt
tests/codegen/compilation/input/: execute.xml  multiple-object.xml  multiple-resources.xml  read.xml  sanitization.xml  write.xml
tests/codegen/object_registry/: CMakeLists.txt
tests/cxx_header_check/: CMakeLists.txt
tests/framework/: CMakeLists.txt  anj_unit_test.c  anj_unit_test.h
tests/init_header_check/: run_check.cmake
tests/iwyu/anj/: CMakeLists.txt
tools/: anjay_codegen.py  coverage  lwm2m_object_registry.py  micro_logs_decode.py
tools/templates/: dynamic_obj_handlers.c.jinja2  dynamic_res_handlers.c.jinja2  header.c.jinja2  inst_reset_handler.c.jinja2  macros.jinja2  multiple_instances_template.c.jinja2  res_handlers.c.jinja2  resources_defs.c.jinja2  single_instance_template.c.jinja2  transactional_handlers.c.jinja2
(+207 files in other folders)
